--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "tsx-conditionals",
   "version": "1.1.0",
   "description": "Express your conditional rendering logic in JSX/TSX",
-  "main": "src/index.tsx",
+  "main": "index.ts",
   "scripts": {
     "start": "parcel src/index.html --open",
     "test": "jest"
