--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "tsx-conditionals",
+  "files": [
+    "lib/**/*"
+  ],
   "version": "1.1.1",
   "description": "Express your conditional rendering logic in JSX/TSX",
-  "main": "index.ts",
+  "main": "lib/index.js",
   "scripts": {
     "start": "parcel src/index.html --open",
+    "build": "tsc",
     "test": "jest"
   },
   "keywords": [
