Fix: removed example.tsx and react-dom from the package

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,9 @@
     "esModuleInterop": true
   },
   "include": ["src/**/*"],
-  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
+  "exclude": [
+    "**/*.test.ts",
+    "**/*.test.tsx",
+    "./src/example.tsx"
+  ]
 }
