--- a/package.json
+++ b/package.json
@@ -28,11 +28,10 @@
     "jest": "^26.0.1",
     "parcel-bundler": "^1.12.4",
     "ts-jest": "^26.1.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.3",
+    "react-dom": "^16.13.1"
   },
   "dependencies": {
-    "components": "^0.1.0",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react": "^16.13.1"
   }
 }
