removed interactive example, changed compilation settings

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
-    "module": "esnext",
+    "module": "commonjs",
     "lib": ["ESNext", "DOM"],
     "jsx": "react",
     "strict": true,
@@ -16,10 +16,6 @@
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true
   },
-  "include": ["src/**/*"],
-  "exclude": [
-    "**/*.test.ts",
-    "**/*.test.tsx",
-    "./src/example.tsx"
-  ]
+  "include": ["src/**/*", "src/index.ts"],
+  "exclude": ["**/*.test.ts", "**/*.test.tsx"]
 }
